<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@color/primary_light"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_back"
        style="@style/ImageButtonGeneral"
        android:background="@drawable/background_transparent_square"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/desc_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_transparent_square"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextContent.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/text_1"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/tv_status"
            app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/TextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/text_1"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_genre"
            app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/status" />


        <TextView
            android:id="@+id/tv_genre"
            style="@style/TextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="24dp"
            android:textColor="@color/text_1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/genre" />

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/round_background"
            android:padding="8dp"
            android:src="@drawable/ic_favorite_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_creator"
        style="@style/TextContent.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/creator"
        android:textColor="@color/text_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tv_rating"
        style="@style/TextContent.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/rating"
        android:textColor="@color/text_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <TextView
        android:id="@+id/tv_creator_value"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/text_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_creator"
        app:layout_constraintStart_toStartOf="@+id/tv_creator"
        app:layout_constraintTop_toBottomOf="@+id/tv_creator"
        tools:text="@string/creator" />

    <TextView
        android:id="@+id/tv_rating_value"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        tools:text="@string/rating"
        android:textColor="@color/text_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_rating"
        app:layout_constraintStart_toStartOf="@+id/tv_rating"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/TextContent.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/desc"
        android:textColor="@color/text_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_creator_value" />

    <TextView
        android:id="@+id/tv_desc_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/gordita_regular"
        android:textColor="@color/text_1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        tools:text="@string/desc" />




</androidx.constraintlayout.widget.ConstraintLayout>