...
            android:gravity="start"
            android:maxLines="2"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/text_1"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/tv_date"
            app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_date"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <TextView
        android:id="@+id/tv_director_value"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
...
